getting those non-xml txt files xml-ready

--- a/docs/blues-styling.css
+++ b/docs/blues-styling.css
@@ -62,3 +62,13 @@ section.error {
 h3.errorPara {
     text-align: center;
 }
+
+
+
+                /* ABOUT PAGE STYLING */
+
+section.about {
+    
+}
+
+
