--- a/docs/blues-styling.css
+++ b/docs/blues-styling.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     color: white;
     font-size: larger;
+    font-family: 'New Tegomin', serif;
 }
 
 header {
@@ -20,6 +21,7 @@ a.navLink {
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1.2em;
+    color: lime;
 }
 
 footer {
